# Generateur-automatique-de-phrases---Projet-C---L2

./: CMakeLists.txt  Git.txt  README.md  abre.c  abre.h  arbre.c  arbre.h  flechie.c  flechie.h  fonctions.c  fonctions.h  functions_test.c  functions_test.h  main.c  queue.c  queue.h
